--- a/Module1/Lab/week4/day.html
+++ b/Module1/Lab/week4/day.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <form action="">
         <input type="number" id="month">
-        <input type="button" onclick="" value="Tính số ngày"><br><br>
+        <input type="button" onclick="dayinmonth()" value="Tính số ngày"><br><br>
     </form>
+    <script>
+        function dayinmonth() {
+            let month = parseInt(document.getElementById('month').value);
+            switch (month) {
+                case 1:
+                case 3:
+                case 5:
+                case 7:
+                case 9:
+                case 11:
+                    document.write('Tháng', + month, 'có 31 ngày')
+                    break;
+                case 2:
+                    document.writes('Tháng', + month, "có 28 hoặc 29 ngày");
+                    break;
+                default:
+                    document.write('Tháng', + month, 'có 30 ngày');
+                    break;
+            }
+        }
+    </script>
 </body>
+
 </html>
