--- a/Module1/Lab/week5/practice1.html
+++ b/Module1/Lab/week5/practice1.html
@@ -3,8 +3,11 @@
     count = 0;
     for (var n = 1; n <= 100; n++) {
         count++;
+        if(count==99){
+            alert("ĐÃ HOÀN THÀNH");
+            break;
+        }
     }
-    alert(count);
 </script>
 
 <!-- Bài 2: Sử dụng hàm prompt() để lấy thông tin nhiệt độ hiện tại được nhập bởi người truy cập. Nếu nhiệt độ nhập vào trên 100, yêu cầu người dùng giảm nhiệt độ. Nếu nhiệt độ dưới 20, yêu cầu người dùng tăng nhiệt độ. -->
