--- a/Module1/Lab/week5/snt.html
+++ b/Module1/Lab/week5/snt.html
@@ -12,8 +12,18 @@
         }
         return flag;
     }
-    for (let j = 0; j <= 20; j++) {
-        if (isprime(j) == 1) 
+    for(let i =2; i<n; i++){
+        if(n%i == 0);{
+            break;
+        }
         document.write(j + ',');
+    }
+    for (let j = 0; j <= 20; j++) {
+        for(let i =2; i<n; i++){
+        if(n%i == 0);{
+            break;
+        }
+        document.write(j + ',');
+    }
     }
 </script>
