--- a/Module1/Lab/week4/long.html
+++ b/Module1/Lab/week4/long.html
@@ -10,16 +10,16 @@
 
 <body>
     <script>
-        let sout;
-        sout = "<table border='1' width='300' cellspacing='0' cellpadding='3'>";
+        let sout1;
+        sout1 = "<table border='1' width='300' cellspacing='0' cellpadding='3'>";
         for (i = 1; i <= 10; i++) {
-            sout = sout + "<tr>";
+            sout1 = sout1 + "<tr>";
             for (j = 1; j <= 10; j++) {
-                sout = sout + "<td>" + i * j + "</td>";
+                sout1 = sout1 + "<td>" + i * j + "</td>";
             }
-            sout = sout + "</tr>";
+            sout1 = sout1 + "</tr>";
         }
-        sout = sout + "</table>";
+        sout1 = sout1 + "</table>";
         document.write(sout);
     </script>
     <script language="javascript">
