--- a/Module1/Lab/week5/practice2.html
+++ b/Module1/Lab/week5/practice2.html
@@ -41,7 +41,7 @@
     document.write("<br>")
     for(i =n;i>=1;i--){
         for(var j =1; j<i; j++){
-            document.write('-');
+            document.write('&nbsp ');
         }
         for(var j =n; j>=i; j--){
             document.write('*');
@@ -52,7 +52,7 @@
     document.write("<br>")
     for(i =1;i<=n;i++){
         for(var j =1; j<i; j++){
-            document.write('-');
+            document.write('&nbsp ');
         }
         for(var j =i; j<=n; j++){
             document.write('*');
