--- a/Module1/Lab/week6/noi.html
+++ b/Module1/Lab/week6/noi.html
@@ -2,3 +2,35 @@
     var myColor = ["Red", "Green", "White", "Black"];
     document.write(myColor.toLocaleString());
 </script>
+
+<script>
+    var num = window.prompt("Enter here:");
+    var str = num.toString();
+    var result = [str[0]];
+    for (var i = 1; i < str.length; i++) {
+        if ((str[0] % 2 === 0) && (str[i] % 2 === 0)) {
+            result.push('-', str[i]);
+        } else {
+            result.push(str[i]);
+        }
+    }
+    document.write(result.join(""));
+</script>
+<script>
+    var str = prompt("Enter here:");
+    var UPPER = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+    var LOWER = 'abcdefghijklmnopqrstuvwxyz';
+    var result = [];
+    for (var i = 0; i < str.length; i++) {
+        if (UPPER.indexOf(str[i]) !== -1) {
+            result.push(str[i].toLowerCase());
+        }
+        else if (LOWER.indexOf(str[i]) !== -1) {
+            result.push(str[i].toUpperCase());
+        }
+        else {
+            result.push(str[i]);
+        }
+    }
+    document.write(result.join(''));
+</script>
