--- a/Module1/Lab/week7/snt.html
+++ b/Module1/Lab/week7/snt.html
@@ -18,7 +18,7 @@
                 }
             }
         }
-        return true
+        return true;
     }
     var n = prompt("Số muốn ktra: ");
     if(isPrime(n)){
