--- a/Module1/Lab/week6/demo.html
+++ b/Module1/Lab/week6/demo.html
@@ -1,6 +1,5 @@
 <script>
-    var a = [ 'c', 's', 'c', '2', '6', '1' ];
-    a.reverse();
-    for(let i of a)
-    document.write(i);
+    var arr = prompt("Enter here: ");
+    arr.toString();
+    
 </script>
