--- a/Module1/Lab/week6/practice1.html
+++ b/Module1/Lab/week6/practice1.html
@@ -41,6 +41,10 @@
     document.write(total/(str.length));
 </script>
 <!-- Bài 4- Viết chương trình khởi tạo/nhập vào một mảng số nguyên và đảo ngược các phần tử trong mảng đó. -->
+<script>
+    var arr = prompt("Enter here: ");
+    arr.toString();
+</script>
 
 <!-- Bài 5- Viết chương trình đếm số nguyên âm trong một chuỗi -->
 <script>
