--- a/Module1/Lab/week6/practice1.html
+++ b/Module1/Lab/week6/practice1.html
@@ -2,8 +2,8 @@
 <script>
     var num = [15, 2, 5, 6, 8, 20, 5, 9, 1, 3];
     var count = 0;
-    for(var i = 0; i<=num.length;i++){
-        if(num[i]>10){
+    for (var i = 0; i <= num.length; i++) {
+        if (num[i] > 10) {
             count++;
         }
     }
@@ -14,12 +14,12 @@
 <script>
     var num = [15, 2, 5, 6, 8, 20, 5, 9, 1, 3];
     var max = num[0];
-    for(i =1; i<=num.length;i++){
-        if(num[i]>max){
+    for (i = 1; i <= num.length; i++) {
+        if (num[i] > max) {
             max = num[i];
         }
     }
-    document.write(max + 'vị trí của số trong mảng là'+ num.indexOf(max));
+    document.write(max + 'vị trí của số trong mảng là' + num.indexOf(max));
 </script>
 
 <!-- Bài 3- Viết chương trình khởi tạo mảng số nguyên. Hiển hiện giá trị lớn nhất trong mảng đó. In ra giá trị trung bình của các phần tử trong mảng. -->
@@ -28,17 +28,17 @@
     var str = num.toString();
     var max = str[0];
     var total = 0;
-    for(var j = 0; j<str.length;j++){
+    for (var j = 0; j < str.length; j++) {
         total = total + parseInt(str[j]);
     }
-    for(var i =1; i<str.length;i++){
-        if(str[i]>max){
+    for (var i = 1; i < str.length; i++) {
+        if (str[i] > max) {
             max = str[i];
         }
     }
-    document.write(max + ' vị trí của số trong mảng là '+ num.indexOf(max));
+    document.write(max + ' vị trí của số trong mảng là ' + num.indexOf(max));
     document.write("<br>")
-    document.write(total/(str.length));
+    document.write(total / (str.length));
 </script>
 <!-- Bài 4- Viết chương trình khởi tạo/nhập vào một mảng số nguyên và đảo ngược các phần tử trong mảng đó. -->
 <script>
@@ -50,9 +50,9 @@
 <script>
     var num = [15, 2, -5, 6, -8, 20, -5, 9, -1, 3];
     var count = 0;
-    for(let i = 0; i<num.length;i++){
-        if(num[i]<0){
-            count ++;
+    for (let i = 0; i < num.length; i++) {
+        if (num[i] < 0) {
+            count++;
         }
     }
     document.write(count);
@@ -60,20 +60,66 @@
 
 <!-- Bài 6- Viết chương trình khởi tạo/nhập vào một mảng số nguyên gồm 10 phần tử, nhập/tạo phần tử số nguyên V. Chương trình tìm xem V có nằm trong mảng số nguyên không? Nếu V thuộc mảng số nguyên thì in ra "V is in the array" còn lại in ra "V is not in the array". -->
 <script>
-
+    var array = [];
+    for (var i = 0; i < 10; i++) {
+        var x = prompt("Nhập phần tử " + i + ": ", 0);
+        array.push(x);
+    }
+    var v = prompt("Nhập số nguyên V: ", 0);
+    var bool = false;
+    for (var i = 0; i < array.length; i++) {
+        if (array[i] == v) bool = true;
+    }
+    if (bool) alert("V is in the array");
+    else alert("V is not in the array");
 </script>
 
 <!-- Bài 7- Viết chương trình khởi tạo/nhập vào một mảng số nguyên gồm 10 phần tử, nhập/tạo phần tử số nguyên V. Chương trình kiểm tra xem V có thuộc mảng đã cho không, nếu V thuộc mảng đã cho xoá V khỏi mảng (Bản chất việc xoá ở đây tức là dịch phần tử ở bên phải V sang vị trí của V, và gán 0 cho phần tử cuối cùng của mảng) -->
 <script>
-
+    var array = [];
+    var index = 0;
+    for (var i = 0; i < 10; i++) {
+        var x = prompt("Nhập phần tử " + i + ": ", 0);
+        array.push(x);
+    }
+    var v = prompt("Nhập số nguyên V: ", 0);
+    var bool = false;
+    for (var i = 0; i < array.length; i++) {
+        if (array[i] == v) {
+            bool = true;
+            index = i;
+        }
+    }
+    if (bool) {
+        for (var i = index; i < array.length - 1; i++) {
+            array[i] = array[i + 1];
+        }
+        array[9] = 0;
+        for (var i = 0; i < array.length; i++) {
+            document.writeln(array[i]);
+        }
+    }
+    else alert("V is not in the array");
 </script>
 
 <!-- Bài 8- Viết chương trình khởi tạo/nhập vào một mảng số nguyên gồm 10 phần tử. Chương trình sắp xếp mảng theo thứ tự giảm dần và hiển thị ra mảng đã được sắp xếp. -->
 <script>
-    
+    var array = [];
+    for (var i = 0; i < 10; i++) {
+        var x = prompt("Nhập phần tử " + i + ": ", 0);
+        array.push(x);
+    }
+    array.sort(function (a, b) { return a - b });
+    for (var i = 0; i < 10; i++) {
+        document.writeln(array[i]);
+    }
 </script>
 
 <!-- Bài 9- Viết chương trình khởi tạo/nhập vào 2 mảng số nguyên gồm 10 phần tử, gọi là mảng a và b. Mảng c là một mảng được khai báo gồm 20 phần tử số nguyên. Chương trình sẽ lưu các phần tử được nối từ hai mảng b và a vào mảng c. Hiển thị mảng c. -->
 <script>
-
+    var a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+    var b = [11, 12, 13, 14, 15, 16, 17, 18, 19, 20];
+    var c = Array(20);
+    c = b.concat(a);
+    alert(c);
 </script>
