--- a/Module1/Lab/week6/practice2.html
+++ b/Module1/Lab/week6/practice2.html
@@ -1,35 +1,72 @@
 <!-- Bài 1: Viết chương trình khởi tạo mảng 2 chiều, gồm một bộ các phần tử có sẵn,  in ra các phần tử trong mảng. Chú ý: Sử dụng vòng lặp for lồng nhau -->
 <script>
     let a = [
-    [1, 2, 1, 24],
-    [8, 11, 9, 4],
-    [7, 0, 7, 27],
-    [7, 4, 28, 14],
-    [3, 10, 26, 7]
-];
-for(var i in a)
-{
-    document.write("row" + i);
-    for(var j in a[i]){
-        document.write(" "+a[i][j]);
+        [1, 2, 1, 24],
+        [8, 11, 9, 4],
+        [7, 0, 7, 27],
+        [7, 4, 28, 14],
+        [3, 10, 26, 7]
+    ];
+    for (var i in a) {
+        document.write("row" + i);
+        for (var j in a[i]) {
+            document.write(" " + a[i][j]);
+        }
     }
-}
 </script>
 
 <!-- Bài 2: Viết một chương trình để in các ký tự trong một mảng theo thứ tự đảo ngược. Ví dụ, nếu một mảng chứa các ký tự  [ 'c', 's', 'c', '2', '6', '1' ] sau khi thực hiện đảo ngược sẽ là "162csc" -->
 <script>
-    var b = [ 'c', 's', 'c', '2', '6', '1' ];
+    var b = ['c', 's', 'c', '2', '6', '1'];
     a.reverse();
-    for(let i of a)
-    document.write(i);
+    for (let i of a)
+        document.write(i);
 </script>
 
 <!-- Bài 3: Viết một chương trình khai báo một mảng ký tự và kích thước của mảng. Chương trình này đếm số ký tự số trong mảng.  -->
-
+<script>
+    var a = ['c', 's', 'c', '2', '6', '1'];
+    var count = 0;
+    for (var i = 0; i < a.length; i++) {
+        if (a[i] == parseFloat(a[i])) count++;
+    }
+    document.writeln("Số chữ số trong mảng: " + count);
+</script>
 
 <!-- Bài 4: Viết một chương trình để đếm số từ trong một chuỗi -->
-
+<script>
+    var s = "So tu trong mot chuoi";
+    var count = 1;
+    for (var i = 0; i < s.length; i++) {
+        if (s[i] == " ") count++;
+    }
+    document.writeln("Số từ trong chuỗi : " + count);
+</script>
 
 <!-- Bài 5: Viết một chương trình nhập vào 2 chuỗi, sau đó kiểm tra xem hai chuỗi có giống nhau hay không. -->
+<script>
+    var s1 = prompt("Nhập chuỗi s1: ");
+    var s2 = prompt("Nhập chuỗi s2: ");
+    function giongnhau(s1, s2) {
+        if (s1.length != s2.length) return false;
+        else {
+            for (var i = 0; i < s1.length; i++) {
+                if (s1[i] != s2[i]) return false;
+            }
+        }
+        return true;
+    }
+    if (giongnhau(s1, s2)) alert("Hai chuỗi giống nhau!");
+    else alert("Hai chuỗi khác nhau!");
+</script>
 
 <!-- Bài 6: Viết chương trình nhập vào một mảng ký tự, tìm tất cả các ký tự trong mảng là (-) và thay thế các ký tự này bởi ký tự ( _ ) -->
+<script>
+    var s=prompt("Nhập mảng kí tự: ");
+    var result=[];
+    for (var i=0;i<s.length;i++){
+      if (s[i]!='-') result.push(s[i]);
+      else result.push('_');
+    }
+    document.writeln(result.join(""));
+</script>
