--- a/Module3/CSS/Bootstrap cơ bản/bai_tap/landing pages/landing.html
+++ b/Module3/CSS/Bootstrap cơ bản/bai_tap/landing pages/landing.html
@@ -13,6 +13,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"></script>-->
     <link rel="stylesheet" href="land.css">
+
 </head>
 <body>
     <div class="container">
@@ -24,8 +25,142 @@
                 <li><a href="">Contact</a></li>
             </ul>
         </div>
-        <div class="content"></div>
-        <div class="footer"></div>
+        <div class="content">
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <div class="numbertext">1 / 3</div>
+                    <img src="https://www.hobbyexport.com/files/pro/002/004/008/MENGMT001.jpg" style="width:70%; height: 500px;">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 3</div>
+                    <img src="https://render.fineartamerica.com/images/rendered/default/poster/10/8/break/images/artworkimages/medium/1/1-ducati-panigale-yurdaer-bes.jpg" style="width:70%; height: 500px;">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 3</div>
+                    <img src="https://ae01.alicdn.com/kf/Hc169c4d5413b4108a116e8e0cdb14b13U/Accessories-Tank-Pad-Protector-Sticker-Decal-Gas-Fuel-Knee-Grip-Tration-Side-for-BMW-s1000rr-2019.jpg_Q90.jpg_.webp" style="width:70%;height: 500px;">
+                </div>
+
+            </div>
+            <div style="text-align:center">
+                <span class="dot"></span> 
+                <span class="dot"></span> 
+                <span class="dot"></span> 
+            </div>
+            <script>
+                var slideIndex = 0;
+                showSlides();
+        
+                function showSlides() {
+                    var i;
+                    var slides = document.getElementsByClassName("mySlides");
+                    var dots = document.getElementsByClassName("dot");
+                    for (i = 0; i < slides.length; i++) {
+                        slides[i].style.display = "none";
+                    }
+                    slideIndex++;
+                    if (slideIndex > slides.length) {
+                        slideIndex = 1
+                    }
+                    for (i = 0; i < dots.length; i++) {
+                        dots[i].className = dots[i].className.replace(" active", "");
+                    }
+                    slides[slideIndex - 1].style.display = "block";
+                    dots[slideIndex - 1].className += " active";
+                    setTimeout(showSlides, 2000); // Change image every 2 seconds
+                }
+            </script>
+            <div class="row">
+                <div class="col col-xs-4 col-lg-4">
+                    <div  class="thumbnail">
+                            <img src="https://autopro8.mediacdn.vn/2021/11/3/h2r10-16359036006881712791251.jpeg" style="width: 100%; height:200px;" >
+                            <div class="caption">
+                                <p id="autoResize">Kawasaki</p>
+                                <p>Legendary Performance.</p>
+                            </div>
+                    </div>
+                </div>
+                <div class="col col-xs-4 col-lg-4">
+                    <div class="thumbnail">
+                            <img src="http://media.vietq.vn/files/ctvgiang/2020/11/24/xe%20m%C3%B4%20t%C3%B4.jpg" style="width: 100%;height:200px;">
+                            <div class="caption">
+                                <p id="autoResize">Ducati</p>
+                                <p>Sportier in appearance, more fun to ride.</p>
+                            </div>
+                    </div>
+                </div>
+                <div class="col col-xs-4 col-lg-4">
+                    <div class="thumbnail">
+                            <img src="https://pbs.twimg.com/media/EPSAalJWsAAsxe5.jpg:large" style="width: 100%;height:200px;">
+                            <div class="caption">
+                                <p id="autoResize">BMW</p>
+                                <p>Make Life a Ride.</p>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="footer">
+            <div class="footer ">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
+                            <div class="row">
+                                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 ">
+                                    <div class="address">
+                                        <h3>Address </h3>
+                                        <ul class="loca">
+                                            <li>
+                                                <a href="#"></a>It is a long established fact
+                                                <br>that a reader will be
+                                            </li>
+                                            <li>
+                                                <a href="#"></a>(+84 0705944385)
+                                            </li>
+                                            <li>
+                                                <a href="#"></a>anhhtgcd191331@fpt.edu.vn
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <div class="address">
+                                        <h3>Social Link</h3>
+                                        <ul class="Menu_footer">
+                                            <li class="active"> <a href="#">Twitter</a> </li>
+                                            <li><a href="#">Facebook</a> </li>
+                                            <li><a href="#">Instagram</a> </li>
+                                            <li><a href="#">Linkdin</a> </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-6 ">
+                                    <div class="address">
+                                        <h3>Newsletter</h3>
+                                        <form class="news">
+                                            <input class="newslatter" placeholder="Enter your email" type="text"
+                                                   name=" Enter your email">
+                                            <button class="submit">Subscribe</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <br><br>
+                <div class="copyright">
+                    <div class="containere" style="text-align: center;">
+                        <p>Copyright © 2021 Design by Hoang Tien Anh
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
